# factorySim

./: .dockerignore  .gitignore  .gitpod.dockerfile  .gitpod.yml  Best Runs.txt  Dockerfile  DockerfileNvidia  LICENSE  Notes  README.md  Singularity.def  SingularityTF.def  Untitled-2.json  agent2.py  agent_A2C.py  agent_TRPO.py  auto.py  buildSingularity.sh  clean.sh  cluster-buildContainer.job  cluster-geneticFactorySim.job  cluster-geneticFactorySim_full.job  cluster-geneticFactorySim_single.job  cluster-test.job  cluster-trainFactorySim-full.job  cluster-trainFactorySim.job  cluster-trainFactorySim_DreamerXL.job  cluster-trainFactorySim_full.job  cluster-trainFactorySim_rest.job  cluster-trainFactorySim_single.job  config.ini  config.yaml  config2.yaml  convert2singularity.sh  curiosity.py  downloadIFCOpenShell.sh  environment.yml  environment_tf.yml  factorySim.py  factorySimLive.py  (+33 more)
Evaluation/: 04.ifc  044_pos.json  05_mf.csv  07.ifc  10.ifc  10_mf.csv  11_mf.csv  13.ifc  16_pos.json  2.ifc  3.ifc  (+4 more)
env/: pyproject.toml  setup.py
env/factorySim/: Errors.txt  __init__.py  baseConfigs.py  creation.py  customModels.py  customModelsTorch.py  customRLModulTF.py  customRLModulTorch.py  factoryObject.py  factorySimClass.py  factorySimEnv.py  factorySimLive.py  kpi.py  rendering.py  routing.py  spielwiese.py  tempCodeRunnerFile.py  test.py  timm_playground.py  utils.py  write.py
env/factorySim/Archive/: customModels.py  ifc_to_shapely.py  kennzahlen.py  old_kennzahlen.py
env/factorySim/Helpers/: MFO.py  Point3D.py
env/src/: factorySimEnv.py
env/src/Helpers/: MFO.py
(+373 files in other folders)
